fixed section headers being invisible lol

--- a/src/components/Front/Front.css
+++ b/src/components/Front/Front.css
@@ -57,6 +57,10 @@ h1 {
 h2 {
   font-size: 40px;
   margin-top: 50px;
+  color: rgb(0, 0, 0);
+}
+
+.date {
   color: rgb(255, 255, 255);
 }
 
